Added plugins, improved docker images and fixed small issues

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,15 @@
-sonar.projectKey=googlenews
-sonar.projectName=Google News
-sonar.projectVersion=1.2
-sonar.projectBaseDir=/home/example/php-projects/googlenews
+# Example file
+sonar.projectKey=athena-sonarqube-plugin
+sonar.projectName=Athena SonarQube Plugin
+sonar.projectVersion=1.0.0
+sonar.projectBaseDir=/home/example/projects/plugin-sonarqube
 
-sonar.sources=vendor/google-news-restapi/
+sonar.sources=bin/, docker/, example/file.php
 sonar.sourceEncoding=UTF-8
 
 sonar.language=php
 
-#sonar.php.tests.reportPath=/home/example/projects/googlenews/tests/junit.xml
+#sonar.php.tests.reportPath=/home/example/projects/tests/junit.xml
 
 #sonar.analysis.mode=publish
 #sonar.github.oauth="token_here"
